--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./public/Paymanniicon.png" type="image/png" sizes="192x192" />
+    <link rel="icon" href="/Paymanniicon.png" type="image/png" sizes="192x192" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PayManni</title>
   </head>
